# code-expert

./: .gitignore  README.md  pyproject.toml
code_expert/: __init__.py  cli.py  git_utils.py  llm.py  topics.py
code_expert/data/: CLAUDE.md.template  SKILL.md
code_expert/prompts/: __init__.py  diff.py  propose.py  spec.py
entries/2026/04/29/: nightly-update-workflow-design.md
ftl_code_expert/: cli.py  git_utils.py  llm.py  observations.py  topics.py
ftl_code_expert/data/: CLAUDE.md.template  SKILL.md
ftl_code_expert/prompts/: __init__.py  common.py  derive.py  file.py  function.py  observe.py  prd.py  repo.py  review.py  scan.py
